Fixed scrollbars

--- a/frontend/src/Css/Dashboard-style.css
+++ b/frontend/src/Css/Dashboard-style.css
@@ -292,13 +292,13 @@
     height: -webkit-fill-available;
     margin: 1%;
     padding: 1%;
-    overflow-x: hidden;
     overflow-y: auto;
 }
 
 .ProfileRecapLeft {
     flex: 1;
     flex-direction: column;
+    overflow-y: auto;
 }
 
 .ProfileRecapLeftTop {
